@@ -1,3 +1,7 @@
+2005-04-19 Scott Dattalo <scott@dattalo.com>
+	* src/symbol.cc, src/symbol.h: Fixed reference to symbol table
+	that was preventing compilation on Linux.
+	
 2005-04-19 J.R. Heisey <jrheisey@sourceforge.com>
 	*  gui/gui_src_asm.cc, gui/gui_statusbar.cc, gui/gui_statusbar.h:
 	Modified the statusbar so that it can handle a switch from
